--- a/index.html
+++ b/index.html
@@ -83,7 +83,16 @@ b. Non-White Voters</li>
 <li>The Blue line represents the mean.</li>
 </ol>
 
-<p><img src="assets/fig/CI-1.png" title="plot of chunk CI" alt="plot of chunk CI" width="400" height="400" /></p>
+<p><img src="assets/fig/CI-1.png" title="plot of chunk CI" alt="plot of chunk CI" width="300" height="300" /></p>
+
+<pre><code class="r">    # make the histogram from rnorm 
+    hist(y, breaks = 30, col = &#39;lightgray&#39;, border = &#39;white&#39;, 
+         main = &#39;Voters Histogram&#39;, xlab = str,
+         xlim = c( min(y), max(y) ) )
+</code></pre>
+
+<pre><code>## Error in hist(y, breaks = 30, col = &quot;lightgray&quot;, border = &quot;white&quot;, main = &quot;Voters Histogram&quot;, : object &#39;y&#39; not found
+</code></pre>
 
   </article>
   <!-- Presenter Notes -->
